# picopi-playground

./: CMakeLists.txt  README.md
Control-Tool/: SimConnect-playground.sln
Control-Tool/SimConnect-playground/: Form1.Designer.cs  Form1.cs  Form1.resx  HidAPICalls.cs  HidCommunicationManager.cs  Program.cs  SimConnect-playground.csproj
Control-Tool/SimConnect-playground/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Control-Tool/SimConnect-playground/USBInterface/: ArrayHelpers.cs  DeviceScanner.cs  HidApi.cs  ReportEventArgs.cs  USBDevice.cs
lib/: CMakeLists.txt
lib/grlib/: string.c
lib/speedmath/: speedmath.c  speedmath.h
src/: CMakeLists.txt  app.c  app.h  main.c
src/config/: board.h
src/displays/: displays.h
src/displays/drivers/: ili9486_driver.c  ili9486_driver.h  vd_driver.c  vd_driver.h
src/displays/raster/: cached.c  lines.c  rectangles.c  triangles.c
src/displays/raster/resources/: fontebrima10b.c  fontebrima12b.c  fontebrima16b.c  fontebrima20b.c  fontebrima24b.c  numbers_ebrima.c  numbers_ebrima.h  numbers_ebrima_big.c  numbers_ebrima_huge.c  numbers_ebrima_medium.c  numbers_ebrima_medium0.c  numbers_ebrima_small.c  numbers_medium_memmap.c  numbers_memmap.c
src/flight/: instrument.c  instrument.h
src/flight/instruments/: altispeed.c  horizon.c  radio_panel.c
src/flight/instruments/altispeed/: altispeed_draw.h  altispeed_scheduler.c  altispeed_zone0.c  altispeed_zone1.c  altispeed_zone2.c  altispeed_zone3.c  altispeed_zone4.c  altispeed_zone5.c  altispeed_zone6.c
src/leds/: led1.c  leds.h
src/usb/: usb.c  usb.h  usb_descriptors.c
tests/: CMakeLists.txt
tests/lcd_ili9486_parallel/: CMakeLists.txt  lcd_ili9486_parallel.c
tests/lcd_ili9486_spi/: CMakeLists.txt  lcd_ili9486_spi.c
tests/lcd_ssd1306_i2c/: CMakeLists.txt  lcd_ssd1306_i2c.c
tests/usb_grlib/: CMakeLists.txt  ili9486_driver.c  usb_grlib.c
tests/usb_lcd_ili9486/: CMakeLists.txt  ili9486.c  ili9486.h  usb_lcd_ili9486.c
